%% clases-dominio tal como está en el código del corte 1 (commit 8c37f83).
%% Es la vista «antes» de clases-dominio.mmd: se genera desde la misma fuente, sin lo que agrega el corte 2.
classDiagram
    direction LR

    class Parametro {
        +nombre: str
        +unidad: str
        +minimo_fisico: float
        +maximo_fisico: float
    }
    class Lectura {
        +parametro: Parametro
        +valor: float
    }
    class Medicion {
        +lecturas: tuple~Lectura~
    }
    class Rango {
        +minimo: float
        +maximo: float
        +ancho: float
        +clasificar(valor: float) EstadoParametro
        +desviacion(valor: float) float
    }
    class Especie {
        +nombre: str
        +nombre_cientifico: str
        +rangos: Parametro → Rango
        +rango_de(parametro: Parametro) Rango
    }
    class EstadoParametro {
        <<enumeration>>
        BAJO
        OPTIMO
        ALTO
    }
    class EstadoGlobal {
        <<enumeration>>
        SALUDABLE
        EN_RIESGO
        CRITICO
    }
    class ResultadoParametro {
        +parametro: Parametro
        +valor: float
        +rango: Rango
        +estado: EstadoParametro
        +desviacion: float
        +fuera_de_rango: bool
    }
    class Diagnostico {
        +especie: str
        +estado: EstadoGlobal
        +resultados: tuple~ResultadoParametro~
        +recomendaciones: tuple~str~
    }
    class ReglaAgregacion {
        <<interface>>
        +agregar(resultados) EstadoGlobal
    }
    class ReglaHibrida {
        -umbral: float = 0.5
        +agregar(resultados) EstadoGlobal
    }
    class ReglaConteo {
        +agregar(resultados) EstadoGlobal
    }
    class GeneradorRecomendaciones {
        +para(resultado: ResultadoParametro) str o None
    }
    class EvaluadorPlanta {
        -regla: ReglaAgregacion
        -recomendaciones: GeneradorRecomendaciones
        +evaluar(especie: Especie, medicion: Medicion) Diagnostico
    }
    class ServicioDiagnostico {
        -consulta: ConsultaRangos
        -evaluador: EvaluadorPlanta
        +diagnosticar(especie: str, medicion: Medicion) Diagnostico
    }

    Medicion "1" *-- "1..*" Lectura : una por parámetro
    Lectura --> Parametro : parametro
    Especie "1" *-- "1..*" Rango : uno por parámetro
    Rango ..> EstadoParametro : clasifica
    Diagnostico "1" *-- "1..*" ResultadoParametro
    Diagnostico --> EstadoGlobal : estado
    ResultadoParametro --> Parametro : parametro
    ResultadoParametro --> Rango : rango
    ResultadoParametro --> EstadoParametro : estado
    ReglaHibrida ..|> ReglaAgregacion
    ReglaConteo ..|> ReglaAgregacion
    EvaluadorPlanta --> ReglaAgregacion : regla
    EvaluadorPlanta --> GeneradorRecomendaciones : recomendaciones
    EvaluadorPlanta ..> Diagnostico : crea
    ServicioDiagnostico --> EvaluadorPlanta : evaluador
    ServicioDiagnostico ..> Especie : la pide al puerto ConsultaRangos

    note "Errores del corte 1, heredan de ErrorDominio:<br>EspecieNoSoportada, ValorFisicamenteImposible,<br>MedicionInvalida, ParametroSinRango, RangoInvalido"


    style Parametro fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style Lectura fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style Medicion fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style Rango fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style Especie fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style EstadoParametro fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style EstadoGlobal fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style ResultadoParametro fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style Diagnostico fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style ReglaAgregacion fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style ReglaHibrida fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style ReglaConteo fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style GeneradorRecomendaciones fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style EvaluadorPlanta fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
    style ServicioDiagnostico fill:#D5E8D4,stroke:#5a7d5f,color:#16231b
